manifests/deployment.yml
# Copyright 2019 Copyright (c) 2019 SAP SE or an SAP affiliate company. All rights reserved. This file is licensed under the Apache Software License, v. 2 except as noted otherwise in the LICENSE file.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: karydia
  labels:
    app: karydia
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: karydia
    spec:
      serviceAccount: karydia
      containers:
      - name: karydia
        image: eu.gcr.io/gardener-project/karydia/karydia #TODO: add version number
        imagePullPolicy: Always
        command:
          - karydia
          - runserver
          - --tls-cert
          - /etc/karydia/tls/cert.pem
          - --tls-key
          - /etc/karydia/tls/key.pem
          - --enable-default-network-policy
          - --enable-karydia-admission
          - --enable-opa-admission
        volumeMounts:
          - name: karydia-tls
            mountPath: /etc/karydia/tls
        livenessProbe:
          httpGet:
            path: /healthz
            port: 33333
            scheme: HTTPS
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          failureThreshold: 2
        ports:
        - containerPort: 33333
      - name: opa
        image: openpolicyagent/opa:0.10.2
        imagePullPolicy: IfNotPresent
        args:
          - "run"
          - "--server"
          - "--addr=http://127.0.0.1:8181"
      - name: kube-mgmt
        image: openpolicyagent/kube-mgmt:0.7
        imagePullPolicy: Always
        args:
          - "--replicate-cluster=v1/pods"
      volumes:
        - name: karydia-tls
          secret:
            secretName: karydia-tls
