manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: karydia
  namespace: kube-system
  labels:
    app: karydia
spec:
  ports:
  - port: 443
    targetPort: 33333
  selector:
    app: karydia
